# sniffler

./: .gitignore  README.md  pyproject.toml
docs/source/: conf.py  index.rst  modules.rst  sniffler.researchers.rst  sniffler.rst  sniffler.web.rst  sniffler.web_ui.migrations.rst  sniffler.web_ui.rst
src/sniffler/: __main__.py  cli.py  collector.py  csv_writer.py  django_manage.py  gui.py  gui_components.py  researcher.py  stats.py  utils.py
src/sniffler/core/: collector.py  csv_writer.py  search.py  stats.py  utils.py
src/sniffler/researchers/: __init__.py  audio.py  base.py  image.py  office.py  pdf.py
src/sniffler/web/: asgi.py  settings.py  urls.py  wsgi.py
src/sniffler/web_ui/: apps.py  forms.py  models.py  tasks.py  tests.py  urls.py  utils.py  views.py
src/sniffler/web_ui/fixtures/: scan_results.json
src/sniffler/web_ui/migrations/: 0001_initial.py  0002_alter_scanresult_id.py
src/sniffler/web_ui/templates/web_ui/: base.html  home.html  scan.html  stats.html
